--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,7 @@
 body, h1, h2, h3, p, ul, li {
     margin: 0;
     padding: 0;
-}
-
-/* Set a modern font for the entire page */
-body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Arial', sans-serif; /* Set a modern font for the entire page */
 }
 
 /* Header styling */
@@ -34,6 +30,15 @@ nav ul li a {
     color: #fff;
     font-weight: bold;
 }
+
+/* Main content styling */
+main {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 /* Style for the links section */
 .links {
     display: flex;
@@ -50,6 +55,7 @@ nav ul li a {
     color: #333;
     background-color: #f0f0f0;
     transition: background-color 0.3s; /* Smooth transition for color change */
+    border-radius: 5px;
 }
 
 /* Change color on hover */
@@ -57,27 +63,6 @@ nav ul li a {
     background-color: #ccc;
 }
 
-/* Main content styling */
-main {
-    padding: 20px;
-}
-
-/* Profile section styling */
-#profile {
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-/* Work experience and university projects section styling */
-section {
-    background-color: #f9f9f9;
-    padding: 20px;
-    margin-top: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
 
 /* Footer styling */
 footer {
@@ -101,7 +86,6 @@ footer {
 /* Style links */
 a {
     color: #007BFF;
-    text-decoration: none;
 }
 
 a:hover {
